--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "secrets-2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Example repo for managing secrets",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Hallvard",
   "license": "ISC",
   "devDependencies": {
     "dotenv": "^16.3.1"
